--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,6 +1,9 @@
 .section{
-    padding-top: 94px;
-    padding-bottom: 94px;
+   //Desktop
+   padding-top: 60px;
+   padding-bottom: 60px;
+   //  padding-top: 94px;
+   //  padding-bottom: 94px;
     margin-top: 0;
     margin-bottom: 0;
  }
