--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,6 @@
 .container{
-    width: 1200px;
-  
+    //width: 1200px;
+  outline: 1px solid green;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 0;
@@ -10,4 +10,13 @@
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    // @media screen and (min-width: 768px){
+    //     width: 768px;
+    // }
+    // @media screen and (min-width: 1200px) {
+    // width: 1200px;
+    // }
 }
