--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -1,21 +1,33 @@
 .advantage{
+
     &__list{
-        display: flex;
+        outline: 1px solid tomato;
+        // display: flex;
         padding-left: 0;
         margin-top: 0;
-        margin-bottom: 94px;
+        //margin-bottom: 94px;
     }
     &__item{
-        width: 270px;
+        width: 100%;
+        outline: 1px solid tomato;
+        //DESKTOP
+        //width: 270px;
     }
     &__item:not(:last-child){
-        margin-right: 30px;
+        margin-bottom: 30px;
     }
+    //DESKTOP
+    // &__item:not(:last-child){
+    //     margin-right: 30px;
+    // }
     &__overlay{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 270px;
+        width: 100%;
+        margin-bottom: 30px;
+        //DESKTOP
+        // width: 270px;
         height: 120px;
         background-color: $second-bg-color;
         border-radius: 4px;
@@ -28,9 +40,19 @@
         height: 70px;
     }
     &__title{
+        //Mob
+        text-transform: uppercase;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 10px;
+        //Desktop
         font-size: 14px;
         font-weight: 700;
         line-height: 1.14;
         color: $title-text-color;
+    }
+    &__discription{
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
