--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,30 +1,56 @@
 .section-hero{
+    width: 100%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/heroes-bg-1.jpg");
     background-size: cover, cover;
     background-repeat: no-repeat, no-repeat;
-    max-width: 1600px;
-    height: 600px;
+   
+    // @media screen and (min-width: 480px) {
+    //     max-width: 480px;
+    //     height: 400px;
+    // }
+    // @media screen and (min-width: 768px) {
+    //     max-width: 480px;
+    //     height: 400px;
+    // }
+    // @media screen and (min-width: 1200px) {
+    // max-width: 1600px;
+    // height: 600px;
+    // }
+
 }
 .hero{
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    padding-left: 252px;
-    padding-right: 252px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    padding-left: 60px;
+    padding-right: 60px;
+
+    //  DESKTOP
+    //  padding-top: 200px;
+    //  padding-bottom: 200px;
+    //  padding-left: 252px;
+    //  padding-right: 252px;
+
     margin-left: auto;
     margin-right: auto;
     
     &__title{
-        font-size: 44px;
-        font-weight: 900;
-        line-height: 1.5;
-        letter-spacing: 0.06em;
-        color: $main-bg-color;
-        text-transform: uppercase;
-        margin-top: 0;
-        margin-bottom: 30px;
+    font-size: 26px;
+    line-height: 1.6;
+
+    // DESKTOP
+    // font-size: 44px; DESKTOP
+    //line-height: 1.5;
+
+    font-weight: 900;
+    letter-spacing: 0.06em;
+    color: $main-bg-color;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 30px;
     }
 }
 .order-button{
