--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,9 +1,18 @@
 .team{
     background-color: $second-bg-color;
-
+    &__title{
+        font-size: 28px;
+        line-height: 1.5;
+        margin-bottom: 30px;
+    }
     &__list{
-        display: flex;
-        justify-content: center;
+        outline: 1px solid tomato;
+
+        // for Desktop
+        // display: flex;
+        // justify-content: center;
+        // margin-left: auto;
+        // margin-right: auto;
         padding-left: 0;
         margin-top: 0;
         margin-bottom: 0;
@@ -21,9 +30,10 @@
                     0 1px 3px rgba(0, 0, 0, 0.2);
     }
 
-    &__item:not(:last-child){
-        margin-right: 30px;
-    }
+//for Desktop
+    // &__item:not(:last-child){
+    //     margin-right: 30px;
+    // }
 
     &__image{
         display: block;
@@ -33,6 +43,7 @@
     }
 
     &__discript{
+        font-size: 16px;
         text-align: center;
         color: $title-text-color;
         font-weight: 500;
@@ -43,7 +54,7 @@
     &__subdiscript{
         text-align: center;
         margin-top: 0;
-        margin-bottom: 0;
+        margin-bottom: 16;
     }
 }
 
