--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -1,36 +1,60 @@
 .advantage{
 
     &__list{
-        outline: 1px solid tomato;
-        // display: flex;
         padding-left: 0;
         margin-top: 0;
-        //margin-bottom: 94px;
+
+      @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+      }
+      @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        margin-top: 0;
+      }
     }
+
     &__item{
         width: 100%;
-        outline: 1px solid tomato;
-        //DESKTOP
-        //width: 270px;
+
+        @media screen and (min-width:768px) { 
+            width: calc((100% - (15px * 4)) / 2);
+            margin: 15px;
+        }
+        @media screen and (min-width:1200px) { 
+            width: 270px;
+            margin: 0;
+        }
     }
+
     &__item:not(:last-child){
-        margin-bottom: 30px;
+
+        @media screen and (max-width:767px) {
+            margin-bottom: 30px;
+        }
+
+        @media screen and (min-width:1200px) { 
+            margin-right: 30px;
+        }
     }
-    //DESKTOP
-    // &__item:not(:last-child){
-    //     margin-right: 30px;
-    // }
+
     &__overlay{
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
         margin-bottom: 30px;
-        //DESKTOP
-        // width: 270px;
+       
         height: 120px;
         background-color: $second-bg-color;
         border-radius: 4px;
+
+        @media screen and (min-width:1200px) {
+        width: 270px;
+        }
     }
     &__image{
         display: block;
@@ -40,16 +64,19 @@
         height: 70px;
     }
     &__title{
-        //Mob
         text-transform: uppercase;
         text-align: center;
         margin-top: 0;
         margin-bottom: 10px;
-        //Desktop
+
         font-size: 14px;
         font-weight: 700;
         line-height: 1.14;
         color: $title-text-color;
+
+        @media screen and (min-width: 768px) {
+            text-align: left;
+        }
     }
     &__discription{
         margin-top: 0;
