--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,12 +4,34 @@
     padding-bottom: 60px;
 
     &__list{
-        display: flex;
-        justify-content: left;
+        text-align: center;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        @media screen and (min-width: 1200px) {
+            flex-wrap: nowrap;
+            justify-content: center;
+        }
     }
-
     &__item:not(:last-child){
-        margin-right: 70px;
+        margin-bottom: 60px;
+}
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        &__item:not(:last-child){
+            width: calc(100% / 2);
+        }
+        &__item:last-child{
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    @media screen and (min-width: 1200px) {
+        &__item:not(:last-child){
+            margin-right: 70px;
+            margin-bottom: 0;
+        }
     }
 
     &__logo{
@@ -19,9 +41,9 @@
     }
 
     &__adress{
-        font-style:normal;
+        font-style: normal;
     }
-/* footer "Присоединяйтесь" */
+
     &__title{
         font-size: 14px;
         line-height: 1.17;
@@ -29,13 +51,25 @@
         text-transform:uppercase;
         color: $main-bg-color;
     }
-
     /*input*/
+
+   &__form{
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    }
+   }
+
     &__input{
         width: 358px;
         padding: 15px 16px 16px 15px;
-    
-        margin-right: 12px;
+        margin-bottom: 20px;
+        
         background-color: transparent;
         font-size: 16px;
         font-weight: 300;
@@ -45,6 +79,14 @@
     
         border-color: $input-border-color;
         border-radius: 4px;
+        
+        @media screen and (min-width: 768px) {
+        width: 450px;
+        }
+        @media screen and (min-width: 1200px) {
+            margin-right: 12px;
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -60,7 +102,6 @@
         color: $main-bg-color;
     }
 }
-
 /* footer smm links */
 .smm__link--grey{ 
     background-color:  $main-text-color;
@@ -70,7 +111,6 @@
         background-color: $button-active;
     }
 }
-
 /*icon to button*/
 .button-footer{
     @extend %btn;
