--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -19,8 +19,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);/*gether 2 rules to centr modal window*/
     
-    min-width: 528px;
-    min-height: 581px;
+    min-width: 450px;
+    min-height: 609px;
     padding: 40px;
 
     background-color: $main-bg-color;
@@ -182,11 +182,17 @@
     display: flex;
     align-items: center;
     position: relative;
-    margin-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
 
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin-bottom: 20px;
+    // padding-left: 10px;
+    // padding-right: 10px;
+}
+.policy-link{
+    color: $accent-text-color;
+}
 .checkbox__icon{
     display: inline-block;
     margin-right: 7px;
