--- a/sass/layout/_ourclients.scss
+++ b/sass/layout/_ourclients.scss
@@ -1,11 +1,33 @@
 .clients{
+    &__title{
+        margin-bottom: 30px;
+        @media screen and (min-width: 1200px) {
+            margin-bottom: 50px;            
+        }
+    }
     &__list{
         display: flex;
+        flex-wrap: wrap;
         justify-content:center;
-        align-items: center;
+        margin: -15px;
+        
+        @media screen and (min-width: 1200px) {
+            margin: 0 -15px;            
+        }
     }
-    &__item:not(:last-child){
-        margin-right: 30px;
+    &__item{
+        margin: 15px;
+        flex-basis: calc((100% - (15px * 4)) / 2);
+
+        @media screen and (min-width: 768px) {
+            flex-basis: calc((100% - (15px * 6)) / 3);
+        }
+
+        @media screen and (min-width: 1200px) {
+            flex-wrap: nowrap;
+            flex-basis: calc((100% - (15px * 12)) / 6);
+            margin: 0 15px;
+        }
     }
     &__icon{
         width: 106px;
@@ -16,8 +38,13 @@
         justify-content: center;
         align-items: center;
 
-        width: 170px;
-        height: 92px; 
+        width: 100%;
+        height: 92px;
+
+        @media screen and (min-width: 1200px) {
+            width: 170px;
+            height: 92px;
+        }
 
         border: 1px solid $main-text-color;
         border-radius: 4px;
