--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import'./components/list';    //+++
 @import'./base/container';     //+++
 @import'./components/section'; //+++
+@import'./components/pic-img';
 //buttons
 @import'./components/placeholders';
 //footer header
