--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,23 +3,56 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/heroes-bg-1.jpg");
+    //background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/heroes-bg-1.jpg");
     background-size: cover, cover;
     background-repeat: no-repeat, no-repeat;
    
     @media screen and (min-width: 480px) {
         max-width: 480px;
+
+        @media screen and (min-device-pixel-ratio: 1),
+                screen and (min-resolution: 96dpi),
+                screen and (min-resolution: 1dppx) {
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_mob_1x_480.jpg");    
+            }
+        @media screen and (min-device-pixel-ratio: 2),
+                screen and (min-resolution: 192dpi),
+                screen and (min-resolution: 2dppx){  
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_mob_2x_960.jpg");    
+        }
         // height: auto;
     }
+
     @media screen and (min-width: 768px) {
         max-width: 1199px;
-        // height: auto;
+        width: 768px;
+        @media screen and (min-device-pixel-ratio: 1),
+                screen and (min-resolution: 96dpi),
+                screen and (min-resolution: 1dppx){
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_tab_1x_768.jpg");    
+        }
+        @media screen and (min-device-pixel-ratio: 2),
+                screen and (min-resolution: 192dpi),
+                screen and (min-resolution: 2dppx){
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_tab_2x_1536.jpg");    
+            }
     }
     @media screen and (min-width: 1200px) {
+        width: 1200px;
         max-width: 1600px;
-        // height: auto;
+        @media screen and (min-device-pixel-ratio: 1),
+                screen and (min-resolution: 96dpi),
+                screen and (min-resolution: 1dppx){
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_desk_1x_1600.jpg");    
+    }
+        @media screen and (min-device-pixel-ratio: 2),
+                screen and (min-resolution: 192dpi),
+                screen and (min-resolution: 2dppx){
+            background-image: linear-gradient(to top,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/images/hero_bg_desk_2x_3200.jpg");    
+        }
     }
 }
+
 .hero{
     height: 400px;
 
